# gcp-skills

./: .env.example  .gitignore  .markdownlint.json  AGENTS.md  README.md  README_CN.md  TODO.md  check_sqlite_fits.sh  create_test_fits.py  demo_sqlite_fits.py  fits_metadata.db  pyproject.toml  requirements-fits.txt  sqlite_fits_integration.py
.agents/: design.md
audit-results/: gcl-trace-iam-ops-20260720-040753.json
docs/: AIOps-self-healing.md  cross-skill-blast-radius.md  diagnostic-logging-standard.md  error-taxonomy.md  factual-accuracy-policy.md  gcl-spec.md  gcp-product-mapping.md  level3-agentic-roadmap-plan.md  level3-agentic-roadmap-spec.md  level4-agentic-roadmap-plan.md  level4-agentic-roadmap-spec.md  post-update-self-review.md  token-efficiency-strategy.md  workflow-lessons.md
gcp-armor-ops/: SKILL.md
gcp-bigquery-ops/: SKILL.md  TODO.md
gcp-billing-ops/: SKILL.md  TODO.md
gcp-cdn-ops/: SKILL.md
gcp-cloudbuild-ops/: SKILL.md  TODO.md
gcp-cloudfunctions-ops/: SKILL.md
gcp-cloudrun-ops/: SKILL.md
gcp-cloudsql-ops/: SKILL.md  TODO.md
gcp-composer-ops/: SKILL.md
gcp-dns-ops/: SKILL.md
gcp-filestore-ops/: SKILL.md
gcp-gce-ops/: SKILL.md
gcp-gcl-runner-ops/: SKILL.md  autonomy_ratio.py  failure_clusterer.py  gcl_logging.py  gcl_trace_schema.py  knowledge_auto_update.py  knowledge_query.py  log_metrics_config.yaml  self_correction.py  self_correction_mechanism.py  trace_feedback.py  trajectory_classifier.py
gcp-gcs-ops/: SKILL.md  TODO.md
gcp-gke-ops/: SKILL.md  TODO.md
gcp-iam-ops/: SKILL.md  TODO.md
gcp-kms-ops/: SKILL.md
(+569 files in other folders)
